--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,55 +1,37 @@
 *{
-  text-align: center;
   font-family: Helvetica;
 }
 
-#header{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
-  image-orientation: left;
-  max-width: 100%;
-  height: auto;
-  margin: auto;
-}
-
-.banner{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
-  font-size: 23px;
-  font-weight: bold;
-  color: white;
-}
-
 h1{
-  font-size: 70px;
+  font-size: 100px;
   font-weight: bold;
-  color: white;
+  text-align: center;
+  color: khaki;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg);
 }
 
-a{
-  color: white;
-  font-size: 18px;
-}
-
-.footer{
-  text-align: left;
-  background-color: grey;
-  font-size: 11px;
-  color: white;
-}
-
-footer-nav{
-  color:white;
-}
-
-h2{
+#brush{
   font-size: 32px;
   font-weight: bold;
+  color: white;
+  background-color: mediumspringgreen;
 }
 
-h3{
-  flow-from: 23px;
+#frames{
+  font-size: 32px;
   font-weight: bold;
+  color: white;
+  background-color: lightcoral;
 }
 
-h4{
-  font-size: 14px;
+#paint{
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
+  background-color: skyblue;
+}
+
+.price{
+  font-weight: bold;
+  color: blue;
 }
